# smart_cloud_tag

./: .gitignore  README.md  example.py  pyproject.toml
src/smart_cloud_tag/: __init__.py  core.py  exceptions.py  models.py  schemas.py  utils.py
src/smart_cloud_tag/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/smart_cloud_tag/providers/: __init__.py  aws_s3.py  azure_blob.py  base.py  gcs_provider.py
